--- a/Ejercicios/35.tex
+++ b/Ejercicios/35.tex
@@ -31,8 +31,8 @@ tendríamos un polinomio que anula todo \(V\) de grado menor \(n\).\\
 
 Entonces existe \(v_i \not \in Ker(m_i^{n_i-1}(T)) \ \forall i\).\\
 
-Si alguno de estos \(v_i\) se anulara en un \(m_j(T)\) con \(i \neq j\),
-entonces el polinomio mínimo de \(\langle v_i \rangle\) divide a \(m_j\) y
+Si alguno de estos \(v_i\) se anulara en un \(m_j^{n_j}(T)\) con \(i \neq j\),
+entonces el polinomio mínimo de \(\langle v_i \rangle\) divide a \(m_j^{n_j}\) y
 \(m_i^{n_i}\), que como son primos relativos resulta ser 1, luego \(v_i = 0\).
 
 Consideramos entonces \(x = \oplus_i v_i\), tenemos que ningún divisor de \(m\)
