--- a/Ejercicios/26.tex
+++ b/Ejercicios/26.tex
@@ -33,9 +33,9 @@ Razonando por contradicción, supongamos que el polinomio característico de \(T
 
 Ahora, como el polinomio mínimo de \(T\restriction_{Ker(m(T))}\) es \(m\) también, y este es irreducible, tenemos que \(g = 1\), lo que prueba la proposición.\\
 
-Veamos lo que hemos probado hasta ahora y lo que necesitamos para terminar el ejercicio. La proposición 2 nos dice que el polinomio característico de \(T\) se escribe como \(m(X)^i\) para algún \(i \in \mathbb{N}\). Ahora, dados los \(v_1, \dots, v_t\) calculados en el ejercicio anterior, tenemos que ver que nuestro polinomio característico es \(m(X)^t\). Para ello, veremos que la dimensión de nuestro espacio vectorial \(V\) es  \(deg(m) \cdot t\), y por tanto el grado de nuestro polinomio característico coincidirá con esta, y por tanto tendrá que ser \(m(X)^t\).
+Veamos lo que hemos probado hasta ahora y lo que necesitamos para terminar el ejercicio. La proposición 2 nos dice que el polinomio característico de \(T\) se escribe como \(m(X)^i\) para algún \(i \in \mathbb{N}\). Ahora, dados los \(v_1, \dots, v_t\) calculados en el ejercicio anterior, tenemos que ver que nuestro polinomio característico es \(m(X)^t\). Para ello, veremos que la dimensión de nuestro espacio vectorial \(V\) es  \(deg(m) \cdot t\), y por tanto el grado de nuestro polinomio característico coincidirá con esta, y por tanto tendrá que ser \(m(X)^t\).\\
 
-En primer lugar, comprobemos que el polinomio mínimo de \(T\restriction_{K[X]v_i}\) es \(m\) para \(i = 1, \dots, t\). Sabemos por el ejercicio anterior que \(V = K[X]v_1 \oplus \cdots \oplus K[X]v_t\). Sabemos también que, dada un espacio vectorial \(V = A \oplus B\), y una aplicación lineal \(T:V \rightarrow V\), el polinomio mínimo de \(T\) es el mínimo común múltiplo entre los polinomios mínimos de  \(T\restriction_{A}\) y  \(T\restriction_{B}\). Por tanto, volviendo a nuestro caso concreto, el polinomio mínimo \(m\) de \(T\) es el mínimo comúm multiplo del polonomio mínimo de \(T\) restringida a cada uno de estos submódulos, pero como \(m\) es irreducible, el polinomio mínimo de cada restricción es  \(m\) también.
+En primer lugar, comprobemos que el polinomio mínimo de \(T\restriction_{K[X]v_i}\) es \(m\) para \(i = 1, \dots, t\). Sabemos por el ejercicio anterior que \(V = K[X]v_1 \oplus \cdots \oplus K[X]v_t\). Sabemos también que, dada un espacio vectorial \(V = A \oplus B\), y una aplicación lineal \(T:V \rightarrow V\), el polinomio mínimo de \(T\) es el mínimo común múltiplo entre los polinomios mínimos de  \(T\restriction_{A}\) y  \(T\restriction_{B}\). Por tanto, volviendo a nuestro caso concreto, el polinomio mínimo \(m\) de \(T\) es el mínimo comúm multiplo del polonomio mínimo de \(T\) restringida a cada uno de estos submódulos, pero como \(m\) es irreducible, el polinomio mínimo de cada restricción es  \(m\) también.\\
 
 Podemos ya calcular la dimensión de cada subespacio \(K[X]v_i\). Sea \(w \in K[X]v_i\), tenemos que  \(w = g(T)(v_i)\). Ahora bien, diviendo nuestro polinomio  \(g\) por el polinomi mínimo  \(m\), tenemos que  \(g = mh + r\), donde \(r\) es un polinomio de grado estrictamente menor que el del polinomio mínimo, luego para cualquier polinomio \(g\) existe un polinomio \(r\) de grado estrictamente menor que el grado del polinomio mínimo \(m\), digamos \(n\), tal que \(g(T)(v_i) = r(T)(v_i)\). Por tanto, \(\{v_i, T(v_i), \dots, T^{n-1}(v_i)\}\) forman un sistema de generadores de \(K[X]v_i\). \\
 
