--- a/Entrega.tex
+++ b/Entrega.tex
@@ -25,11 +25,11 @@
 
 \maketitle
 
-% Cambiar Luis Ortea por Guillermo Galindo
+% Cambiar Luis Ortega por Guillermo Galindo
 Los ejercicios que presentamos están también presentes en el repositorio de github \url{https://github.com/Ludvins/EjerciciosAGR}. Aquí se encuentran la resolución de bastantes más ejercicios de la relación, que hemos realizado entre Luis Ortega y yo. En particular, los ejercicios que están en este documento son, o realizados por mi, o realizados entre los dos.
 
-\input{Ejercicios/18}
 \input{Ejercicios/25}
+\input{Ejercicios/26}
 \input{Ejercicios/27}
 
 \end{document}
