--- a/Entrega.tex
+++ b/Entrega.tex
@@ -26,7 +26,7 @@
 \maketitle
 
 % Cambiar Luis Ortega por Guillermo Galindo
-Los ejercicios que presentamos están también presentes en el repositorio de github \url{https://github.com/Ludvins/EjerciciosAGR}. Aquí se encuentran la resolución de bastantes más ejercicios de la relación, que hemos realizado entre Luis Ortega y yo. En particular, los ejercicios que están en este documento son, o realizados por mi, o realizados entre los dos.
+Los ejercicios que presentamos están también presentes en el repositorio de github \url{https://github.com/Ludvins/EjerciciosAGR}. Aquí se encuentran la resolución de bastantes más ejercicios de la relación, que hemos realizado entre Luis Ortega y yo, y cualquier comentario sobre ellos será bien recibido. En particular, los ejercicios que están en este documento son, o realizados por mi, o realizados entre los dos.
 
 \input{Ejercicios/25}
 \input{Ejercicios/26}
