--- a/Entrega.tex
+++ b/Entrega.tex
@@ -20,8 +20,8 @@
       \large Ejercicios
   }
 
-% \author{Guillermo Galindo Ortuño}
-\author{Luis Antonio Ortega Andrés}
+\author{Guillermo Galindo Ortuño}
+% \author{Luis Antonio Ortega Andrés}
 
 \maketitle
 
@@ -29,11 +29,10 @@ Los ejercicios que presentamos están también presentes en el repositorio de
 github \url{https://github.com/Ludvins/EjerciciosAGR/blob/master/Ejercicios.pdf}
 y cualquier comentario sobre ellos será bien recibido. Aquí se encuentran la
 resolución de bastantes más ejercicios de la relación, que hemos realizado entre
-Guillermo Galindo y yo. En particular, los ejercicios que están en este documento son, o realizados por mi, o realizados entre los dos.
+Luis Ortega y yo. En particular, los ejercicios que están en este documento son, o realizados por mi, o realizados entre los dos.
 
-\input{Ejercicios/22}
+\input{Ejercicios/25}
 \input{Ejercicios/26}
-\input{Ejercicios/35}
-
+\input{Ejercicios/27}
 
 \end{document}
