--- a/Entrega.tex
+++ b/Entrega.tex
@@ -17,22 +17,20 @@
 \begin{document}
 
 \title{Álgebras, Grupos y Representaciones \\
-      \large Ejercicios
+      \large Ejercicio
   }
 
-\author{Guillermo Galindo Ortuño}
-% \author{Luis Antonio Ortega Andrés}
+% \author{Guillermo Galindo Ortuño}
+\author{Luis Antonio Ortega Andrés}
 
 \maketitle
 
-Los ejercicios que presentamos están también presentes en el repositorio de
-github \url{https://github.com/Ludvins/EjerciciosAGR/blob/master/Ejercicios.pdf}
-y cualquier comentario sobre ellos será bien recibido. Aquí se encuentran la
-resolución de bastantes más ejercicios de la relación, que hemos realizado entre
-Luis Ortega y yo. En particular, los ejercicios que están en este documento son, o realizados por mi, o realizados entre los dos.
+% Los ejercicios que presentamos están también presentes en el repositorio de
+% github \url{https://github.com/Ludvins/EjerciciosAGR/blob/master/Ejercicios.pdf}
+% y cualquier comentario sobre ellos será bien recibido. Aquí se encuentran la
+% resolución de bastantes más ejercicios de la relación, que hemos realizado entre
+% Luis Ortega y yo. En particular, los ejercicios que están en este documento son, o realizados por mi, o realizados entre los dos.
 
-\input{Ejercicios/25}
-\input{Ejercicios/26}
-\input{Ejercicios/27}
+\input{Ejercicios/20}
 
 \end{document}
