--- a/Ejercicios/51.tex
+++ b/Ejercicios/51.tex
@@ -4,6 +4,6 @@ Veamos que no existe ningún subespacio propio invariante, para ello, notamos qu
 
 Consideramos ahora la permutación \((1 \ 3)\), tenemos que
 \[
-  \pi((1 \ 3))(W) \subset W \implies \pi((1 \ 3))(a, b) = (-b, a) \in \langle (a, b) \rangle
+  \pi((1 \ 3))(W) \subset W \implies \pi((1 \ 3))(a, b) = (-b, -a) \in \langle (a, b) \rangle
 \]
 Pero \((-b,-a)\perp (a,b)\), por lo tanto, no existen subespacios propios invariantes.
