--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -53,4 +53,7 @@
 \input{Ejercicios/48}
 \input{Ejercicios/49}
 \input{Ejercicios/51}
+
+\input{Ejercicios/52}
+\input{Ejercicios/54}
 \end{document}
