--- a/Ejercicios/54.tex
+++ b/Ejercicios/54.tex
@@ -11,7 +11,7 @@ por ser \(\pi\) un epimorfismo de grupos.\\
 
 Por otro lado, por el mismo motivo, tenemos que estos conjuntos de subespacios de \(V\) son iguales.
 \[
-   \{ W \ :  \rho \circ \pi(g)(W) \subset W \ \forall g \in G\} = \{ W \ : \rho(g+H)(W) \subset W \ \forall g+H \in G/H\}
+   \{ W \ :  ((\rho \circ \pi)(g))(W) \subset W \ \forall g \in G\} = \{ W \ : \rho(g+H)(W) \subset W \ \forall g+H \in G/H\}
 \]
 
 Por lo tanto, queda demostrada la irreducibilidad en ambos sentidos.
