--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -7,6 +7,7 @@
 \usepackage{geometry}
 \usepackage{titlesec}
 \usepackage{calc}
+\usepackage{float}
 \setlength{\parindent}{0pt}
 
 \titleformat{\section}[runin]
@@ -58,4 +59,5 @@
 \input{Ejercicios/54}
 \input{Ejercicios/55}
 \input{Ejercicios/56}
+\input{Ejercicios/57}
 \end{document}
