--- a/Ejercicios.tex
+++ b/Ejercicios.tex
@@ -60,4 +60,7 @@
 \input{Ejercicios/55}
 \input{Ejercicios/56}
 \input{Ejercicios/57}
+\input{Ejercicios/60}
+\input{Ejercicios/61}
+
 \end{document}
