Añade salto de linea

--- a/Ejercicios/62.tex
+++ b/Ejercicios/62.tex
@@ -1,7 +1,7 @@
 \section{Ejercicio 62}%
 \label{sec:ejercicio_62}
 
-\textit{Sea \(G\) un grupo abeliano finito, y sea \(\widehat{G}\) el conjunto de los caracteres complejos irreducibles de \(G\). Demostrar que el producto inducido por el de números complejos dota a \(\widehat{G}\) de estructura de grupo.}
+\textit{Sea \(G\) un grupo abeliano finito, y sea \(\widehat{G}\) el conjunto de los caracteres complejos irreducibles de \(G\). Demostrar que el producto inducido por el de números complejos dota a \(\widehat{G}\) de estructura de grupo.} \\
 
 En efecto, dados \(\chi, \chi' \in \widehat{G}\), definimos \(\rho: G \to GL(\mathbb{C})\) con
 \[
